# AlmosThere-Browser

./: .gitignore  Cargo.toml  README.md  bookmarks.txt  debug_client.py
JustBarelyScript/: Cargo.toml
JustBarelyScript/UnitTest/001-basic-script-execution/: index.html
JustBarelyScript/UnitTest/002-multiple-script-tags-execute-in-order/: index.html
JustBarelyScript/UnitTest/003-console-logging/: index.html
JustBarelyScript/UnitTest/004-element-creation/: index.html
JustBarelyScript/UnitTest/005-css-class-assignment/: index.html
JustBarelyScript/UnitTest/006-setattribute-and-getattribute/: index.html
JustBarelyScript/UnitTest/007-innerhtml-basic-replacement/: index.html
JustBarelyScript/UnitTest/008-query-selector-by-id/: index.html
JustBarelyScript/UnitTest/009-query-selector-by-class/: index.html
JustBarelyScript/UnitTest/010-queryselectorall-and-length/: index.html
JustBarelyScript/UnitTest/011-for-loop-dom-update/: index.html
JustBarelyScript/UnitTest/012-event-listener-click/: index.html
JustBarelyScript/UnitTest/013-event-object-target/: index.html
JustBarelyScript/UnitTest/014-input-value-reading/: index.html
JustBarelyScript/UnitTest/015-input-event/: index.html
JustBarelyScript/src/: ast.rs  console.rs  effects.rs  error.rs  html.rs  lexer.rs  lib.rs  navigator.rs  parser.rs  screen.rs  specs_placeholder.rs
almostthere_browser/: Cargo.toml
almostthere_browser/src/: main.rs
rich_canvas/src/: lib.rs
sample_pages/: test_2x2.avif  test_basic_page.html
scripts/: localize_ecosia_diagnostic_assets.py
(+27 files in other folders)
