[workspace]
members = ["almostthere_browser", "rich_canvas", "JustBarelyScript"]
default-members = ["almostthere_browser"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
eframe = "0.33"
egui = "0.33"
image = { version = "0.25", features = ["avif-native"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
